<resources>
    <string name="app_name">MenuProject</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_help">Help Activity</string>
    <string name="title_activity_new">New Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_help">Help</string>
    <string name="SMS">SMS</string>
    <string name="PHONE">PHONE</string>
    <string name="WEB">WEB</string>
    <string name="MAP">MAP</string>
    <string name="SHARE">SHARE</string>
    <string name="NEW_ACTIVITY">NEW ACTIVITY</string>
    <string name="new_activity_greeting">Hello! John, Madias</string>
    <string name="help_activity_greeting">Hello! This is the Help Activity!</string>


</resources>
