<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="40dp"
    tools:context=".MainActivityFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentStart="true"
        android:paddingStart="16dp"
        android:paddingTop="25dp"
        android:paddingEnd="16dp">

        <Button
            android:id="@+id/sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SMS" />

        <Button
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PHONE" />

        <Button
            android:id="@+id/web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/WEB" />

        <Button
            android:id="@+id/map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MAP" />

        <Button
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SHARE" />

        <Button
            android:id="@+id/new_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NEW_ACTIVITY" />


    </LinearLayout>

</RelativeLayout>